# dde-shell

frame/layershell/: dlayershellwindow.cpp  qwaylandlayershellsurface.cpp
panels/dock/: CMakeLists.txt  DockCompositor.qml  constants.h  dockabstractsettingsconfig.h  dockdbusproxy.cpp  dockdbusproxy.h  dockpanel.cpp  dockpanel.h  dockpluginmanagerextension.cpp  dockpluginmanagerextension_p.h  dockpluginmanagerintegration.cpp  dockpluginmanagerintegration_p.h  docksettings.cpp  docksettings.h  docksettingsdconfig.cpp  docksettingsdconfig.h  pluginmanagerextension.cpp  pluginmanagerextension_p.h
panels/dock/dconfig/: org.deepin.ds.dock.json
panels/dock/dockplugin/: CMakeLists.txt
panels/dock/dockplugin/application-tray/: CMakeLists.txt  abstracttrayprotocol.h  ddeindicatortrayprotocol.cpp  ddeindicatortrayprotocol.h  util.cpp  (+9 more)
panels/dock/launcherItem/: CMakeLists.txt  launcheritem.cpp  launcheritem.h
panels/dock/package/: main.qml
panels/dock/showdesktop/: CMakeLists.txt  showdesktop.cpp  showdesktop.h
panels/dock/taskmanager/: CMakeLists.txt  abstractwindow.h  abstractwindowmonitor.h  appidentifybyam.h  appitem.cpp  appitem.h  appitemam.cpp  appitemam.h  appmenu.cpp  appmenu.h  desktopfileamparser.cpp  desktopfileamparser.h  global.h  globals.h  taskmanager.cpp  taskmanager.h  waylandwindow.h  waylandwindowmonitor.h  x11utils.h  x11window.h  x11windowmonitor.cpp  x11windowmonitor.h
panels/dock/taskmanager/dbus/api/: org.deepin.dde.daemon.Dock1.xml
panels/dock/taskmanager/dbus/types/: am.h
panels/dock/taskmanager/package/: AppItem.qml  taskmanager.qml
(+19 files in other folders)
